# ordinals-indexer

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
canister/: Cargo.toml  ordinals-indexer.did
canister/src/: bitcoin_api.rs  chain.rs  config.rs  error.rs  index.rs  inscriptions.rs  lib.rs  logs.rs  main.rs  properties.rs  rpc.rs
canister/src/index/: entry.rs  lot.rs  reorg.rs  updater.rs  utxo_entry.rs
canister/src/index/updater/: inscription_updater.rs
canister/src/inscriptions/: envelope.rs  inscription.rs  inscription_id.rs
interface/: Cargo.toml  README.md
